--- a/MfcWeb/Views/Login/Login.cshtml
+++ b/MfcWeb/Views/Login/Login.cshtml
@@ -20,6 +20,7 @@
             <input type="password" class="form-control" id="password" placeholder="Enter your password">
         </div>
         <button type="submit" class="btn btn-primary w-100" id="btn-login">Login</button>
+        <p id="msg-login">Invalid login attempt</p>
     </form>
 </div>
 
