--- a/MfcWeb/Views/Bpkb/ListBpkb.cshtml
+++ b/MfcWeb/Views/Bpkb/ListBpkb.cshtml
@@ -2,9 +2,12 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    var user_id = ViewData["username"];
 }
 
 <h2>Table Data</h2>
+
+<button class="btn btn-danger m-4" id="add_bpkb">Add BPKB</button>
 
 <table id="myTable" class="display">
     <thead>
