update location storage and modify logic feature

--- a/MfcWeb/Views/Bpkb/AddBpkb.cshtml
+++ b/MfcWeb/Views/Bpkb/AddBpkb.cshtml
@@ -6,14 +6,15 @@
     var user_id = ViewData["user_id"];
 }
 
+<div class="loading-screen">
+    <div class="spinner"></div>
+</div>
+
 <input id="user_id" style="display: none;" value=@user_id />
+
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="mb-3">
-                <label class="form-label">Agreement Number</label>
-                <input id="agreement_number" class="form-control" />
-            </div>
             <div class="mb-3">
                 <label class="form-label">Branch Id</label>
                 <input id="branch_id" class="form-control" />
@@ -64,6 +65,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="alert alert-primary" role="alert">
+    Sebelum melakukan input data terlebih dahulu isi location storage di tab storage
 </div>
 
 @section Scripts {
