--- a/MfcWeb/Views/Shared/_Navbar.cshtml
+++ b/MfcWeb/Views/Shared/_Navbar.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bpkb" asp-action="ListBpkb">Bpkb</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Storage" asp-action="Index">Storage</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Storage" asp-action="ListStorage">Storage</a>
                         </li>
                     </ul>
                 </div>
