new feature update action and bug fix

--- a/MfcWeb/Views/Bpkb/ListBpkb.cshtml
+++ b/MfcWeb/Views/Bpkb/ListBpkb.cshtml
@@ -12,7 +12,7 @@
 <table id="myTable" class="display">
     <thead>
         <tr>
-            <th>Aggrement Number</th>
+            <th>Agreement Number</th>
             <th>No. BPKB</th>
             <th>Branch ID</th>
             <th>BPKB Date</th>
@@ -25,6 +25,7 @@
             <th>Created On</th>
             <th>Last Update By</th>
             <th>Last Update On</th>
+            <th>Action</th>
         </tr>
     </thead>
 </table>
