--- a/MfcWeb/Views/Bpkb/UpdateBpkb.cshtml
+++ b/MfcWeb/Views/Bpkb/UpdateBpkb.cshtml
@@ -2,17 +2,20 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-
     var user_id = ViewData["user_id"];
+    var agreement_number = ViewData["agreement_number"];
+
 }
+
 
 <div class="loading-screen">
     <div class="spinner"></div>
 </div>
 
-<h2>Create New BPKB</h2>
+<h2>Update BPKB</h2>
 
 <input id="user_id" style="display: none;" value=@user_id />
+<input id="agreement_number" style="display: none;" value=@agreement_number />
 <div class="container">
     <div class="row">
         <div class="col">
@@ -73,5 +76,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/add-bpkb.js"></script>
+    <script src="~/js/update-bpkb.js"></script>
 }
